--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -641,7 +641,7 @@ body {
   object-fit: cover;
 }
 
-.productCard a {
+.productCard button {
   display: block;
   background-color: #000000;
   color: #ffffff;
@@ -650,13 +650,14 @@ body {
   border: none;
   margin-bottom: 8px;
   text-decoration: none;
+  width: 100%;
 }
 
-.productCard a:hover {
+.productCard button:hover:enabled {
   background-color: #301e5f;
 }
 
-.productCard a,
+.productCard button,
 .productCard h3 {
   font-size: 1.25rem;
 }
@@ -744,15 +745,17 @@ body {
   text-align: right;
 }
 
-.discardBtn a {
+.discardBtn button {
   text-decoration: none;
   display: inline-block;
   padding: 10px;
   font-size: 2rem;
   color: #000000;
+  border: none;
+  background-color: transparent;
 }
 
-.discardBtn a:hover {
+.discardBtn button:hover:enabled {
   color: #6a33f8;
   -webkit-transform: scale(1.3);
   transform: scale(1.3);
@@ -768,7 +771,7 @@ body {
   font-size: 1.25rem;
 }
 
-.discardAllBtn:hover {
+.discardAllBtn:hover:enabled {
   background-color: #000000;
   color: #ffffff;
 }
@@ -835,7 +838,7 @@ body {
   border-radius: 5px;
 }
 
-.orderInfo-btn:hover {
+.orderInfo-btn:hover:enabled {
   background-color: #301e5f;
 }
 
@@ -931,3 +934,31 @@ body {
   display: none;
 }
 /*# sourceMappingURL=all.css.map */
+
+.quality-control {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: flex-start;
+  align-items: center;
+}
+.quality-control {
+  padding-top: 3px;
+  padding-bottom: 3px;
+}
+.quality-control .a-num {
+  display: block;
+  padding: 3px 1px;
+  text-decoration: none;
+  border: 1px solid #eaf0ed;
+  color: #3f5d45;
+}
+
+.quality-control .add-btn,
+.remove-btn {
+  border: none;
+}
+
+.quality-control .add-btn:hover:enabled,
+.remove-btn:hover:enabled {
+  background-color: #6a33f8;
+}
